--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
 
+
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -33,6 +34,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
+	compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+	compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
 	compile 'org.webjars:bootstrap:3.3.7-1'
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
